cabal-version: 3.0
name: jsaddle-wasm
version: 0.0.0.0
synopsis: Run JSaddle @JSM@ with the GHC WASM backend
description: Run JSaddle @JSM@ with the GHC WASM backend.
category: Web, Javascript
homepage: https://github.com/amesgen/jsaddle-wasm
bug-reports: https://github.com/amesgen/jsaddle-wasm/issues
license: CC0-1.0
license-file: LICENSE
extra-source-files: README.md
author: amesgen
maintainer: amesgen@amesgen.de
extra-doc-files: CHANGELOG.md

source-repository head
  location: https://github.com/amesgen/jsaddle-wasm
  type: git

common common
  ghc-options:
    -Wall
    -Wunused-packages
    -Wredundant-constraints

  default-language: GHC2021
  default-extensions:
    BlockArguments
    OverloadedStrings

library
  import: common
  exposed-modules:
    Language.Javascript.JSaddle.Wasm

  build-depends:
    aeson,
    async,
    base,
    bytestring,
    ghc-experimental,
    jsaddle,
    stm,

  hs-source-dirs: src
